// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute proof_of_insurance endpoint happy path should handle minimal merkle root 1`] = `
{
  "data": {
    "aum": "0",
    "navDate": "1704067200000000000",
    "navPerShare": "1",
    "ripcord": 0,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "{"owner_party_id":"minimal-owner","tree_id":"tree-minimal"}",
    },
  },
  "result": "1",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute proof_of_insurance endpoint happy path should handle special characters in owner_party_id and tree_id 1`] = `
{
  "data": {
    "aum": "1",
    "navDate": "1740787200000000000",
    "navPerShare": "340282366920938463463374607431768211455",
    "ripcord": 0,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "{"owner_party_id":"owner::with-special/chars","tree_id":"tree & test"}",
    },
  },
  "result": "340282366920938463463374607431768211455",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute proof_of_insurance endpoint happy path should return success 1`] = `
{
  "data": {
    "aum": "14633571274752607128562449278584030529372914390265201950",
    "navDate": "1773147978000000000",
    "navPerShare": "346721066100686420582578309663873500522184437856905853753",
    "ripcord": 0,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "{"owner_party_id":"trizegroup-cantontestnetvalidator-1::12205de11e389c7da899c66b0fec93ac08b8e9023e8deb30a1316ed9925955fbf06b","tree_id":"tree-001"}",
    },
  },
  "result": "346721066100686420582578309663873500522184437856905853753",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute proof_of_insurance endpoint happy path should return success for another tree 1`] = `
{
  "data": {
    "aum": "255",
    "navDate": "1749988800000000000",
    "navPerShare": "0",
    "ripcord": 0,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "{"owner_party_id":"trizegroup-cantontestnetvalidator-1::12205de11e389c7da899c66b0fec93ac08b8e9023e8deb30a1316ed9925955fbf06b","tree_id":"tree-002"}",
    },
  },
  "result": "0",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute proof_of_insurance endpoint validation errors should fail on empty request 1`] = `
{
  "error": {
    "message": "[Param: owner_party_id] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute proof_of_insurance endpoint validation errors should fail on invalid owner_party_id type 1`] = `
{
  "error": {
    "message": "[Param: owner_party_id] input type is not the expected one (string)",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute proof_of_insurance endpoint validation errors should fail on invalid tree_id type 1`] = `
{
  "error": {
    "message": "[Param: tree_id] input type is not the expected one (string)",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute proof_of_insurance endpoint validation errors should fail on missing owner_party_id 1`] = `
{
  "error": {
    "message": "[Param: owner_party_id] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute proof_of_insurance endpoint validation errors should fail on missing tree_id 1`] = `
{
  "error": {
    "message": "[Param: tree_id] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;
